// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SnackBar > when snacks values are not set > matches the snapshot 1`] = `
"<transition-stub name="snackbar" appear="false" persisted="false" css="true">
  <!--v-if-->
</transition-stub>"
`;

exports[`SnackBar > when snacks values are set > when snacks values are more than 1 > matches the snapshot 1`] = `
"<transition-stub name="snackbar" appear="false" persisted="false" css="true">
  <div class="wrapper">
    <transition-group-stub name="snackbar" appear="false" persisted="false" css="true">
      <div>
        <div data-test-id="content-wrapper" class="error snackbar">
          <p data-test-id="content" class="content">content-0</p><button class="iconButton" type="button">
            <phxcircle class="icon" aria-hidden="true" size="20" weight="duotone"></phxcircle><span class="text visually-hidden"> Clear snack </span>
          </button>
        </div>
      </div>
      <div>
        <div data-test-id="content-wrapper" class="error snackbar">
          <p data-test-id="content" class="content">content-1</p><button class="iconButton" type="button">
            <phxcircle class="icon" aria-hidden="true" size="20" weight="duotone"></phxcircle><span class="text visually-hidden"> Clear snack </span>
          </button>
        </div>
      </div>
      <div>
        <div data-test-id="content-wrapper" class="error snackbar">
          <p data-test-id="content" class="content">content-2</p><button class="iconButton" type="button">
            <phxcircle class="icon" aria-hidden="true" size="20" weight="duotone"></phxcircle><span class="text visually-hidden"> Clear snack </span>
          </button>
        </div>
      </div>
      <div>
        <div data-test-id="content-wrapper" class="error snackbar">
          <p data-test-id="content" class="content">content-3</p><button class="iconButton" type="button">
            <phxcircle class="icon" aria-hidden="true" size="20" weight="duotone"></phxcircle><span class="text visually-hidden"> Clear snack </span>
          </button>
        </div>
      </div>
    </transition-group-stub>
  </div>
</transition-stub>"
`;

exports[`SnackBar > when snacks values are set > when value is { id: 'id', content: 'content', type: 'error' } > matches the snapshot 1`] = `
"<transition-stub name="snackbar" appear="false" persisted="false" css="true">
  <div class="wrapper">
    <transition-group-stub name="snackbar" appear="false" persisted="false" css="true">
      <div>
        <div data-test-id="content-wrapper" class="error snackbar">
          <p data-test-id="content" class="content">content</p><button class="iconButton" type="button">
            <phxcircle class="icon" aria-hidden="true" size="20" weight="duotone"></phxcircle><span class="text visually-hidden"> Clear snack </span>
          </button>
        </div>
      </div>
    </transition-group-stub>
  </div>
</transition-stub>"
`;

exports[`SnackBar > when snacks values are set > when value is { id: 'id', content: 'content', type: 'info' } > matches the snapshot 1`] = `
"<transition-stub name="snackbar" appear="false" persisted="false" css="true">
  <div class="wrapper">
    <transition-group-stub name="snackbar" appear="false" persisted="false" css="true">
      <div>
        <div data-test-id="content-wrapper" class="info snackbar">
          <p data-test-id="content" class="content">content</p><button class="iconButton" type="button">
            <phxcircle class="icon" aria-hidden="true" size="20" weight="duotone"></phxcircle><span class="text visually-hidden"> Clear snack </span>
          </button>
        </div>
      </div>
    </transition-group-stub>
  </div>
</transition-stub>"
`;

exports[`SnackBar > when snacks values are set > when value is { id: 'id', content: 'content', type: 'success' } > matches the snapshot 1`] = `
"<transition-stub name="snackbar" appear="false" persisted="false" css="true">
  <div class="wrapper">
    <transition-group-stub name="snackbar" appear="false" persisted="false" css="true">
      <div>
        <div data-test-id="content-wrapper" class="success snackbar">
          <p data-test-id="content" class="content">content</p><button class="iconButton" type="button">
            <phxcircle class="icon" aria-hidden="true" size="20" weight="duotone"></phxcircle><span class="text visually-hidden"> Clear snack </span>
          </button>
        </div>
      </div>
    </transition-group-stub>
  </div>
</transition-stub>"
`;
